# val3dity

./: CMakeLists.txt  flake.nix  val3dity-config.cmake.in
src/: Feature.cpp  Feature.h  Primitive.h  Surface.cpp  Surface.h  input.h  main.cpp
